Реализовал работу с пользователями и айтемами